// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  USER
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      Role     @default(USER)
  createdAt DateTime @default(now())

  refreshTokens   RefreshToken[]
  energyContracts EnergyContract[]
}

model RefreshToken {
  id        Int      @id @default(autoincrement())
  token     String   @unique
  userId    Int
  user      User     @relation(fields: [userId], references: [id])
  createdAt DateTime @default(now())
}

// Catálogo de tipos de tarifa (solo 7 registros: 1, 1A … 1F).
// type: String con los valores CFE reales ("1", "1A", "1B", "1C", "1D", "1E", "1F").
// summerStartMonth/summerEndMonth: meses inclusivos del periodo de verano (null = sin verano, ej. tarifa 1).
model Tariff {
  id   Int    @id @default(autoincrement())
  type String @unique

  cityMappings    CityTariff[]
  monthlyRates    TariffMonthlyRate[]
  energyContracts EnergyContract[]
}

// Mapeo ciudad → tarifa (datos de referencia / seed).
// summerStartMonth/summerEndMonth: meses inclusivos del periodo de verano para esta ciudad
// (null = sin verano). Permite que dos ciudades con la misma tarifa tengan verano distinto.
model CityTariff {
  id               Int    @id @default(autoincrement())
  city             String @unique
  tariffId         Int
  tariff           Tariff @relation(fields: [tariffId], references: [id])
  summerStartMonth Int?
  summerEndMonth   Int?
}

// Cargo fijo y bloques para un mes, año y temporada específicos dentro de una tarifa.
// isSummer=true: precios y límites de la temporada de verano de la CFE.
// fixedCharge: cargo de suministro mensual en MXN (prorratear por días del periodo).
model TariffMonthlyRate {
  id          Int     @id @default(autoincrement())
  month       Int
  year        Int
  isSummer    Boolean @default(false)
  fixedCharge Float
  tariffId    Int
  tariff      Tariff  @relation(fields: [tariffId], references: [id])

  blocks TariffBlock[]

  @@unique([tariffId, month, year, isSummer])
}

// Un bloque de consumo dentro de una tarifa mensual.
// blockOrder: 1 = Básico, 2 = Intermedio, 3 = Excedente (T1D tiene hasta 4).
// kwhLimit: límite diario en kWh para este bloque (null = sin límite, último bloque).
//   Para obtener el límite del periodo: kwhLimit * días_del_subperiodo.
model TariffBlock {
  id                  Int               @id @default(autoincrement())
  blockOrder          Int
  blockName           String
  kwhLimit            Float?
  pricePerKwh         Float
  tariffMonthlyRateId Int
  tariffMonthlyRate   TariffMonthlyRate @relation(fields: [tariffMonthlyRateId], references: [id])

  @@unique([tariffMonthlyRateId, blockOrder])
}

model EnergyContract {
  id           Int     @id @default(autoincrement())
  contractName String
  meterNumber  String  @unique
  city         String?
  isActive     Boolean @default(true)

  createdAt DateTime @default(now())

  userId   Int
  user     User   @relation(fields: [userId], references: [id])
  tariffId Int
  tariff   Tariff @relation(fields: [tariffId], references: [id])

  consumptionRecords ConsumptionRecord[]
}

model ConsumptionRecord {
  id            Int      @id @default(autoincrement())
  periodStart   DateTime
  periodEnd     DateTime
  kwhNonSummer  Float
  kwhSummer     Float

  createdAt  DateTime       @default(now())
  contractId Int
  contract   EnergyContract @relation(fields: [contractId], references: [id])
}
