Table User {
  id        Int      [pk, increment]
  email     String   [unique, not null]
  password  String   [not null]
  role      Role     [not null, default: 'USER']
  createdAt DateTime [default: `now()`]
}

Table RefreshToken {
  id        Int      [pk, increment]
  token     String   [unique, not null]
  userId    Int      [not null, ref: > User.id]
  createdAt DateTime [default: `now()`]
}

// Catálogo: solo 7 registros (1, 1A … 1F). type guarda el valor CFE real como String.
// El periodo de verano no es fijo por tarifa: se determina por los registros isSummer=true
// en TariffMonthlyRate (puede variar por año según publicaciones del DOF).
Table Tariff {
  id   Int    [pk, increment]
  type String [unique, not null]
}

// Mapeo ciudad → tarifa (seed data).
// summerStartMonth/summerEndMonth: meses inclusivos del verano para esta ciudad (null = sin verano).
Table CityTariff {
  id               Int    [pk, increment]
  city             String [unique, not null]
  tariffId         Int    [not null, ref: > Tariff.id]
  summerStartMonth Int
  summerEndMonth   Int
}

// Cargo fijo y temporada para un mes/año/tarifa.
// isSummer=true: precios de temporada de verano CFE.
// fixedCharge: cargo de suministro mensual en MXN (solo en registros isSummer=false).
Table TariffMonthlyRate {
  id          Int     [pk, increment]
  month       Int     [not null]
  year        Int     [not null]
  isSummer    Boolean [not null, default: false]
  fixedCharge Float   [not null]
  tariffId    Int     [not null, ref: > Tariff.id]

  indexes {
    (tariffId, month, year, isSummer) [unique]
  }
}

// Bloques de consumo por tarifa mensual.
// blockOrder: 1=Básico 2=Intermedio 3=Excedente (T1D verano hasta 4).
// kwhLimit: límite MENSUAL acumulado en kWh del bloque (null = sin límite, último bloque).
//   Límite del periodo = floor(kwhLimit × días_del_subperiodo / días_del_mes).
Table TariffBlock {
  id                  Int    [pk, increment]
  blockOrder          Int    [not null]
  blockName           String [not null]
  kwhLimit            Float
  pricePerKwh         Float  [not null]
  tariffMonthlyRateId Int    [not null, ref: > TariffMonthlyRate.id]

  indexes {
    (tariffMonthlyRateId, blockOrder) [unique]
  }
}

Table EnergyContract {
  id           Int     [pk, increment]
  contractName String  [not null]
  meterNumber  String  [unique, not null]
  city         String
  isActive     Boolean [default: true]
  createdAt    DateTime [default: `now()`]
  userId       Int     [not null, ref: > User.id]
  tariffId     Int     [not null, ref: > Tariff.id]
}

// kwhNonSummer + kwhSummer = consumo total del periodo.
// La CFE determina el split manualmente según los días fuera/dentro de verano.
Table ConsumptionRecord {
  id           Int      [pk, increment]
  periodStart  DateTime [not null]
  periodEnd    DateTime [not null]
  kwhNonSummer Float    [not null]
  kwhSummer    Float    [not null]
  createdAt    DateTime [default: `now()`]
  contractId   Int      [not null, ref: > EnergyContract.id]
}

Enum Role {
  ADMIN
  USER
}

